# code-summarization

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: code-quality.yml
app/: main.py  model.py
app/templates/: form.html
code-summarization/: bleu.py  model.py  run.py
code_summarization/scripts/: benchmark.py
code_summarization/src/: run.py
notebooks/: train.ipynb
src/: utils.py
src/app/: database.py  dbmodels.py  main.py  model.py
src/app/static/: style.css
src/app/templates/: form.html  history.html  result.html
src/data_processing/: process_features.py
src/model/: model.py
src/training/: run.py
src/training/configs/: finetune.yaml
src/training/metrics/: bleu.py
src/unixcoder_pipeline/model/: model.py
src/unixcoder_pipeline/training/: run.py
src/unixcoder_pipeline/training/configs/: finetune.yaml
