[tool.poetry]
name = "code-summarization"
version = "0.1.0"
description = ""
authors = ["Aigerim Assylkhanova <assylkhanova0@gmail.com>",
"Nikita Abramov <n8ron2206@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.1"
numpy = "^1.26.2"
transformers = "^4.35.2"
types-tqdm = "^4.66.0.5"
jupyter = "^1.0.0"
hydra-core = "^1.3.2"
wandb = "^0.16.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

